[project]
name = "langgraph-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.12",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.3.28",
    "langgraph-cli>=0.2.2",
    "langgraph-prebuilt>=0.1.8",
]
